--- a/coin_config.json
+++ b/coin_config.json
@@ -26,7 +26,7 @@
     "max_atr_pct": 0.04,
     "max_body_atr": 1.75,
     "use_htf_filter": 0,
-    "cooldown_seconds": 900,
+    "cooldown_seconds": 240,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
     "sl_atr_mult": 1.8,
@@ -66,10 +66,10 @@
     "early_stop_adverse_atr": 0.9,
     "early_stop_wick_factor": 1.3,
     "adx_strong_thresh": 22.0,
-    "max_hold_seconds": 3600,
+    "max_hold_seconds": 12600,
     "min_roi_to_close_by_time": 0.0,
     "time_stop_only_if_loss": 1,
-    "max_hold_seconds_be": 7200,
+    "max_hold_seconds_be": 14400,
     "trend_filter_mode": "ema200",
     "adx_period": 14,
     "adx_thresh": 18.0,
@@ -93,7 +93,7 @@
     "max_atr_pct": 0.04,
     "max_body_atr": 1.75,
     "use_htf_filter": 0,
-    "cooldown_seconds": 900,
+    "cooldown_seconds": 240,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
     "sl_atr_mult": 1.8,
@@ -133,10 +133,10 @@
     "early_stop_adverse_atr": 0.9,
     "early_stop_wick_factor": 1.3,
     "adx_strong_thresh": 22.0,
-    "max_hold_seconds": 3600,
+    "max_hold_seconds": 12600,
     "min_roi_to_close_by_time": 0.0,
     "time_stop_only_if_loss": 1,
-    "max_hold_seconds_be": 7200,
+    "max_hold_seconds_be": 14400,
     "trend_filter_mode": "ema200",
     "adx_period": 14,
     "adx_thresh": 18.0,
@@ -160,7 +160,7 @@
     "max_atr_pct": 0.05,
     "max_body_atr": 2.2,
     "use_htf_filter": 0,
-    "cooldown_seconds": 900,
+    "cooldown_seconds": 240,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
     "sl_atr_mult": 1.8,
@@ -225,7 +225,7 @@
     "max_atr_pct": 0.04,
     "max_body_atr": 1.75,
     "use_htf_filter": 0,
-    "cooldown_seconds": 900,
+    "cooldown_seconds": 240,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
     "sl_atr_mult": 1.8,
@@ -247,6 +247,11 @@
       "down_prob_short": 0.45,
       "score_threshold": 1.0
     },
+    "tp_mode": "dual_strength",
+    "strength_rules": {
+      "weak_if_atr_pct_lt": 0.009,
+      "weak_if_roi_future_lt": 0.15
+    },
     "use_breakeven": 1,
     "be_trigger_pct": 0.004,
     "be_min_gap_pct": 0.0001,
@@ -258,10 +263,10 @@
     "early_stop_adverse_atr": 0.9,
     "early_stop_wick_factor": 1.3,
     "adx_strong_thresh": 22.0,
-    "max_hold_seconds": 3600,
+    "max_hold_seconds": 12600,
     "min_roi_to_close_by_time": 0.0,
     "time_stop_only_if_loss": 1,
-    "max_hold_seconds_be": 7200,
+    "max_hold_seconds_be": 14400,
     "trend_filter_mode": "ema200",
     "adx_period": 14,
     "adx_thresh": 18.0,
@@ -275,7 +280,7 @@
     "SLIPPAGE_PCT": 0.02,
     "trailing_step_min": 1e-09
   },
-  "NEIROUSDT": {
+  "ALGOUSDT": {
     "leverage": 15,
     "risk_per_trade": 0.08,
     "taker_fee": 0.0005,
@@ -285,7 +290,7 @@
     "max_atr_pct": 0.04,
     "max_body_atr": 1.75,
     "use_htf_filter": 0,
-    "cooldown_seconds": 900,
+    "cooldown_seconds": 240,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
     "sl_atr_mult": 1.8,
@@ -307,6 +312,11 @@
       "down_prob_short": 0.45,
       "score_threshold": 1.0
     },
+    "tp_mode": "dual_strength",
+    "strength_rules": {
+      "weak_if_atr_pct_lt": 0.009,
+      "weak_if_roi_future_lt": 0.15
+    },
     "use_breakeven": 1,
     "be_trigger_pct": 0.004,
     "be_min_gap_pct": 0.0001,
@@ -318,10 +328,10 @@
     "early_stop_adverse_atr": 0.9,
     "early_stop_wick_factor": 1.3,
     "adx_strong_thresh": 22.0,
-    "max_hold_seconds": 3600,
+    "max_hold_seconds": 12600,
     "min_roi_to_close_by_time": 0.0,
     "time_stop_only_if_loss": 1,
-    "max_hold_seconds_be": 7200,
+    "max_hold_seconds_be": 14400,
     "trend_filter_mode": "ema200",
     "adx_period": 14,
     "adx_thresh": 18.0,
@@ -335,7 +345,7 @@
     "SLIPPAGE_PCT": 0.02,
     "trailing_step_min": 1e-09
   },
-  "USTCUSDT": {
+  "DOTUSDT": {
     "leverage": 15,
     "risk_per_trade": 0.08,
     "taker_fee": 0.0005,
@@ -345,7 +355,7 @@
     "max_atr_pct": 0.04,
     "max_body_atr": 1.75,
     "use_htf_filter": 0,
-    "cooldown_seconds": 900,
+    "cooldown_seconds": 240,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
     "sl_atr_mult": 1.8,
@@ -367,6 +377,11 @@
       "down_prob_short": 0.45,
       "score_threshold": 1.0
     },
+    "tp_mode": "dual_strength",
+    "strength_rules": {
+      "weak_if_atr_pct_lt": 0.009,
+      "weak_if_roi_future_lt": 0.15
+    },
     "use_breakeven": 1,
     "be_trigger_pct": 0.004,
     "be_min_gap_pct": 0.0001,
@@ -378,10 +393,10 @@
     "early_stop_adverse_atr": 0.9,
     "early_stop_wick_factor": 1.3,
     "adx_strong_thresh": 22.0,
-    "max_hold_seconds": 3600,
+    "max_hold_seconds": 12600,
     "min_roi_to_close_by_time": 0.0,
     "time_stop_only_if_loss": 1,
-    "max_hold_seconds_be": 7200,
+    "max_hold_seconds_be": 14400,
     "trend_filter_mode": "ema200",
     "adx_period": 14,
     "adx_thresh": 18.0,
