--- a/coin_config.json
+++ b/coin_config.json
@@ -20,10 +20,10 @@
     "cooldown_seconds": 900,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
-    "sl_atr_mult": 1.8,
-    "sl_min_pct": 0.012,
-    "sl_max_pct": 0.035,
-    "be_trigger_r": 0.0,
+    "sl_atr_mult": 1.6,
+    "sl_min_pct": 0.010,
+    "sl_max_pct": 0.030,
+    "be_trigger_r": 0.5,
     "trail": {
       "use_adx_step": false,
       "min_step_pct": 0.006,
@@ -34,16 +34,30 @@
       ]
     },
     "ml": {
-      "strict": true,
-      "up_prob_long": 0.55,
-      "down_prob_short": 0.45,
-      "score_threshold": 1.0
+      "strict": false,
+      "score_threshold": 1.2
     },
     "use_breakeven": 1,
     "be_trigger_pct": 0.004,
-    "be_min_gap_pct": 0.0001,
+    "be_min_gap_pct": 0.001,
     "trailing_trigger": 1.0,
     "trailing_step": 0.3,
+    "tp_mode": "dual_strength",
+    "strength_rules": {
+      "weak_if_atr_pct_lt": 0.01,
+      "weak_if_roi_future_lt": 0.15
+    },
+    "weak_tp_roi_pct": 0.10,
+    "use_trailing_on_strong": 1,
+    "adopt_manual_positions": 1,
+    "manual_guard": {
+      "place_sl_on_attach": 1,
+      "sl_on_attach_mode": "ATR",
+      "sl_on_attach_atr_mult": 1.6,
+      "sl_on_attach_pct": 0.012,
+      "sl_min_pct": 0.010,
+      "sl_max_pct": 0.030
+    },
     "trail_atr_k": 2.0,
     "early_stop_enabled": 0,
     "early_stop_bars": 2,
@@ -80,10 +94,10 @@
     "cooldown_seconds": 900,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
-    "sl_atr_mult": 1.8,
-    "sl_min_pct": 0.012,
-    "sl_max_pct": 0.035,
-    "be_trigger_r": 0.0,
+    "sl_atr_mult": 1.6,
+    "sl_min_pct": 0.010,
+    "sl_max_pct": 0.030,
+    "be_trigger_r": 0.5,
     "trail": {
       "use_adx_step": false,
       "min_step_pct": 0.006,
@@ -94,16 +108,30 @@
       ]
     },
     "ml": {
-      "strict": true,
-      "up_prob_long": 0.55,
-      "down_prob_short": 0.45,
+      "strict": false,
       "score_threshold": 1.2
     },
     "use_breakeven": 1,
     "be_trigger_pct": 0.004,
-    "be_min_gap_pct": 0.0001,
+    "be_min_gap_pct": 0.001,
     "trailing_trigger": 1.0,
     "trailing_step": 0.3,
+    "tp_mode": "dual_strength",
+    "strength_rules": {
+      "weak_if_atr_pct_lt": 0.01,
+      "weak_if_roi_future_lt": 0.15
+    },
+    "weak_tp_roi_pct": 0.10,
+    "use_trailing_on_strong": 1,
+    "adopt_manual_positions": 1,
+    "manual_guard": {
+      "place_sl_on_attach": 1,
+      "sl_on_attach_mode": "ATR",
+      "sl_on_attach_atr_mult": 1.6,
+      "sl_on_attach_pct": 0.012,
+      "sl_min_pct": 0.010,
+      "sl_max_pct": 0.030
+    },
     "trail_atr_k": 2.0,
     "early_stop_enabled": 0,
     "early_stop_bars": 2,
@@ -140,10 +168,10 @@
     "cooldown_seconds": 900,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
-    "sl_atr_mult": 1.8,
-    "sl_min_pct": 0.012,
-    "sl_max_pct": 0.035,
-    "be_trigger_r": 0.0,
+    "sl_atr_mult": 1.6,
+    "sl_min_pct": 0.010,
+    "sl_max_pct": 0.030,
+    "be_trigger_r": 0.5,
     "trail": {
       "use_adx_step": false,
       "min_step_pct": 0.006,
@@ -154,16 +182,30 @@
       ]
     },
     "ml": {
-      "strict": true,
-      "up_prob_long": 0.55,
-      "down_prob_short": 0.45,
-      "score_threshold": 1.0
+      "strict": false,
+      "score_threshold": 1.2
     },
     "use_breakeven": 1,
     "be_trigger_pct": 0.004,
-    "be_min_gap_pct": 0.0001,
+    "be_min_gap_pct": 0.001,
     "trailing_trigger": 1.0,
     "trailing_step": 0.3,
+    "tp_mode": "dual_strength",
+    "strength_rules": {
+      "weak_if_atr_pct_lt": 0.01,
+      "weak_if_roi_future_lt": 0.15
+    },
+    "weak_tp_roi_pct": 0.10,
+    "use_trailing_on_strong": 1,
+    "adopt_manual_positions": 1,
+    "manual_guard": {
+      "place_sl_on_attach": 1,
+      "sl_on_attach_mode": "ATR",
+      "sl_on_attach_atr_mult": 1.6,
+      "sl_on_attach_pct": 0.012,
+      "sl_min_pct": 0.010,
+      "sl_max_pct": 0.030
+    },
     "trail_atr_k": 2.0,
     "early_stop_enabled": 0,
     "early_stop_bars": 2,
@@ -200,10 +242,10 @@
     "cooldown_seconds": 900,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
-    "sl_atr_mult": 1.8,
-    "sl_min_pct": 0.012,
-    "sl_max_pct": 0.035,
-    "be_trigger_r": 0.0,
+    "sl_atr_mult": 1.6,
+    "sl_min_pct": 0.010,
+    "sl_max_pct": 0.030,
+    "be_trigger_r": 0.5,
     "trail": {
       "use_adx_step": false,
       "min_step_pct": 0.006,
@@ -214,16 +256,30 @@
       ]
     },
     "ml": {
-      "strict": true,
-      "up_prob_long": 0.55,
-      "down_prob_short": 0.45,
-      "score_threshold": 1.0
+      "strict": false,
+      "score_threshold": 1.2
     },
     "use_breakeven": 1,
     "be_trigger_pct": 0.004,
-    "be_min_gap_pct": 0.0001,
+    "be_min_gap_pct": 0.001,
     "trailing_trigger": 1.0,
     "trailing_step": 0.3,
+    "tp_mode": "dual_strength",
+    "strength_rules": {
+      "weak_if_atr_pct_lt": 0.01,
+      "weak_if_roi_future_lt": 0.15
+    },
+    "weak_tp_roi_pct": 0.10,
+    "use_trailing_on_strong": 1,
+    "adopt_manual_positions": 1,
+    "manual_guard": {
+      "place_sl_on_attach": 1,
+      "sl_on_attach_mode": "ATR",
+      "sl_on_attach_atr_mult": 1.6,
+      "sl_on_attach_pct": 0.012,
+      "sl_min_pct": 0.010,
+      "sl_max_pct": 0.030
+    },
     "trail_atr_k": 2.0,
     "early_stop_enabled": 0,
     "early_stop_bars": 2,
@@ -260,10 +316,10 @@
     "cooldown_seconds": 900,
     "sl_mode": "ATR",
     "sl_pct": 0.008,
-    "sl_atr_mult": 1.8,
-    "sl_min_pct": 0.012,
-    "sl_max_pct": 0.035,
-    "be_trigger_r": 0.0,
+    "sl_atr_mult": 1.6,
+    "sl_min_pct": 0.010,
+    "sl_max_pct": 0.030,
+    "be_trigger_r": 0.5,
     "trail": {
       "use_adx_step": false,
       "min_step_pct": 0.006,
@@ -274,16 +330,30 @@
       ]
     },
     "ml": {
-      "strict": true,
-      "up_prob_long": 0.55,
-      "down_prob_short": 0.45,
-      "score_threshold": 1.0
+      "strict": false,
+      "score_threshold": 1.2
     },
     "use_breakeven": 1,
     "be_trigger_pct": 0.004,
-    "be_min_gap_pct": 0.0001,
+    "be_min_gap_pct": 0.001,
     "trailing_trigger": 1.0,
     "trailing_step": 0.3,
+    "tp_mode": "dual_strength",
+    "strength_rules": {
+      "weak_if_atr_pct_lt": 0.01,
+      "weak_if_roi_future_lt": 0.15
+    },
+    "weak_tp_roi_pct": 0.10,
+    "use_trailing_on_strong": 1,
+    "adopt_manual_positions": 1,
+    "manual_guard": {
+      "place_sl_on_attach": 1,
+      "sl_on_attach_mode": "ATR",
+      "sl_on_attach_atr_mult": 1.6,
+      "sl_on_attach_pct": 0.012,
+      "sl_min_pct": 0.010,
+      "sl_max_pct": 0.030
+    },
     "trail_atr_k": 2.0,
     "early_stop_enabled": 0,
     "early_stop_bars": 2,
