--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,11 @@
 [pytest]
 pythonpath = .
-addopts = -q -W error::FutureWarning
+addopts = -q
+asyncio_mode = auto
+filterwarnings =
+    ignore:websockets\.legacy is deprecated:DeprecationWarning
+    ignore:websockets\.WebSocketClientProtocol is deprecated:DeprecationWarning
+    ignore:Module 'Adapter SDWS\.py' adalah shim:UserWarning
+    ignore:.*distutils package is deprecated.*:DeprecationWarning
+markers =
+    asyncio: mark test as asyncio-based
