--- a/coin_config.json
+++ b/coin_config.json
@@ -480,5 +480,143 @@
     "use_htf_filter": 1,
     "use_trailing_on_strong": 1,
     "weak_tp_roi_pct": 0.1
+  },
+  "BTCUSDT": {
+    "SLIPPAGE_PCT": 0.0008,
+    "adx_period": 14,
+    "adx_strong_thresh": 22.0,
+    "adx_thresh": 18.0,
+    "be_min_gap_pct": 0.0005,
+    "be_trigger_pct": 0.004,
+    "be_trigger_r": 0.4,
+    "cooldown_mul_early_stop": 1.2,
+    "cooldown_mul_hard_sl": 2.5,
+    "cooldown_mul_trailing": 1.0,
+    "cooldown_seconds": 240,
+    "early_stop_adverse_atr": 0.9,
+    "early_stop_bars": 2,
+    "early_stop_enabled": 0,
+    "early_stop_wick_factor": 1.25,
+    "leverage": 15,
+    "margin_type": "ISOLATED",
+    "max_atr_pct": 0.02,
+    "max_body_atr": 1.2,
+    "max_hold_seconds": 14400,
+    "max_hold_seconds_be": 21600,
+    "minNotional": 5.0,
+    "minQty": 0.001,
+    "min_atr_pct": 0.0015,
+    "ml": {
+      "score_threshold": 0.9,
+      "strict": true
+    },
+    "quantityPrecision": 3,
+    "risk_per_trade": 0.06,
+    "sl_atr_mult": 1.4,
+    "sl_max_pct": 0.025,
+    "sl_min_pct": 0.008,
+    "sl_mode": "ATR",
+    "sl_pct": 0.006,
+    "startup_skip_bars": 0,
+    "stepSize": 0.001,
+    "strength_rules": {
+      "weak_if_atr_pct_lt": 0.004,
+      "weak_if_roi_future_lt": 0.12
+    },
+    "taker_fee": 0.0005,
+    "time_stop_only_if_loss": 1,
+    "tp_mode": "dual_strength",
+    "trail": {
+      "adx_bounds": [20,60],
+      "max_step_pct": 0.009,
+      "min_step_pct": 0.004,
+      "use_adx_step": false
+    },
+    "trail_atr_k": 1.8,
+    "trailing_step": 0.002,
+    "trailing_step_min": 1e-09,
+    "trailing_trigger": 0.004,
+    "trend_filter_mode": "ema200",
+    "use_breakeven": 1,
+    "use_htf_filter": 1,
+    "use_trailing_on_strong": 1,
+    "weak_tp_roi_pct": 0.08,
+    "sr_mtf": {
+      "enabled": true,
+      "chart_tf": "15m",
+      "use_presets": false,
+      "detection_tfs": ["1h","4h"],
+      "detection_length": 15,
+      "sr_margin": 1.6,
+      "filter_false_breakouts": true,
+      "use_prev_historical_levels": true,
+      "atr_len": 17,
+      "vol_sma_len": 17,
+      "rejection_shadow_mult": 1.5,
+      "rejection_vol_mult": 1.5,
+      "false_breakout_atr_mult": 0.45,
+      "near_zone_atr_mult": 0.7
+    }
+  },
+  "ETHUSDT": {
+    "SLIPPAGE_PCT": 0.0010,
+    "adx_period": 14,
+    "adx_strong_thresh": 22.0,
+    "adx_thresh": 18.0,
+    "be_min_gap_pct": 0.0006,
+    "be_trigger_pct": 0.005,
+    "be_trigger_r": 0.45,
+    "cooldown_mul_early_stop": 1.2,
+    "cooldown_mul_hard_sl": 2.5,
+    "cooldown_mul_trailing": 1.0,
+    "cooldown_seconds": 240,
+    "early_stop_adverse_atr": 0.9,
+    "early_stop_bars": 2,
+    "early_stop_enabled": 0,
+    "early_stop_wick_factor": 1.3,
+    "leverage": 15,
+    "margin_type": "ISOLATED",
+    "max_atr_pct": 0.025,
+    "max_body_atr": 1.3,
+    "max_hold_seconds": 14400,
+    "max_hold_seconds_be": 21600,
+    "minNotional": 5.0,
+    "minQty": 0.001,
+    "min_atr_pct": 0.0025,
+    "ml": {
+      "score_threshold": 0.9,
+      "strict": true
+    },
+    "quantityPrecision": 3,
+    "risk_per_trade": 0.06,
+    "sl_atr_mult": 1.5,
+    "sl_max_pct": 0.03,
+    "sl_min_pct": 0.01,
+    "sl_mode": "ATR",
+    "sl_pct": 0.007,
+    "startup_skip_bars": 0,
+    "stepSize": 0.001,
+    "strength_rules": {
+      "weak_if_atr_pct_lt": 0.005,
+      "weak_if_roi_future_lt": 0.12
+    },
+    "taker_fee": 0.0005,
+    "time_stop_only_if_loss": 1,
+    "tp_mode": "dual_strength",
+    "trail": {
+      "adx_bounds": [20,60],
+      "max_step_pct": 0.010,
+      "min_step_pct": 0.005,
+      "use_adx_step": false
+    },
+    "trail_atr_k": 1.9,
+    "trailing_step": 0.0025,
+    "trailing_step_min": 1e-09,
+    "trailing_trigger": 0.005,
+    "trend_filter_mode": "ema200",
+    "use_breakeven": 1,
+    "use_htf_filter": 1,
+    "use_trailing_on_strong": 1,
+    "weak_tp_roi_pct": 0.09
   }
 }
