--- a/coin_config.json
+++ b/coin_config.json
@@ -3,7 +3,8 @@
     "weak_tp_roi_pct": 0.10,
     "weak_spot_up_pct": 0.01,
     "weak_fut_up_roi": 0.15,
-    "use_trailing_when_strong": true
+    "use_trailing_when_strong": true,
+    "min_confirms": 1
   },
   "ADAUSDT": {
     "SLIPPAGE_PCT": 0.003,
